<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:color/black" />

    <RelativeLayout
        android:id="@+id/controls_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" >

        <View
            android:id="@+id/drop_shadow_top"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/drop_shadow_top" />

        <View
            android:id="@+id/drop_shadow_bottom"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/drop_shadow_bottom" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:ellipsize="end"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:lines="1"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/extra_views_container" />

        <LinearLayout
            android:id="@+id/extra_views_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="8dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" >

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_24dp"

                android:visibility="gone"

                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/background_item_selected"

                android:contentDescription="@string/open_video_in_youtube" />

        </LinearLayout>

        <ImageView
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_36dp"

            android:visibility="invisible"

            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/background_item_selected"

            android:layout_centerInParent="true"
            android:contentDescription="@string/play_button" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:maxHeight="100dp"
                android:progressBackgroundTint="@color/red"
                android:progressTint="@color/red"
                android:thumbTint="@color/red" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/seek_bar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/video_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/null_time"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/video_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/fullscreen_button"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/null_time"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/live_video_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_toStartOf="@+id/fullscreen_button"
                    android:drawablePadding="@dimen/_8dp"
                    android:drawableStart="@drawable/ic_live_dot_red"
                    android:gravity="start|center_vertical"
                    android:text="@string/live"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/youtube_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/video_duration"
                    android:background="@drawable/background_item_selected"
                    android:clickable="true"
                    android:contentDescription="@string/open_video_in_youtube"
                    android:focusable="true"
                    android:src="@drawable/ic_youtube_24dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/fullscreen_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@drawable/background_item_selected"
                    android:clickable="true"
                    android:contentDescription="@string/full_screen_button"
                    android:focusable="true"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:src="@drawable/ic_fullscreen_24dp" />

            </RelativeLayout>

        </RelativeLayout>

       
        <ImageView
            android:id="@+id/custom_action_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_36dp"

            android:visibility="gone"

            android:padding="8dp"
            android:layout_margin="32dp"

            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/background_item_selected"

            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/play_pause_button" />

        <ImageView
            android:id="@+id/custom_action_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_36dp"

            android:visibility="gone"

            android:padding="8dp"
            android:layout_margin="32dp"

            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/background_item_selected"

            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause_button" />

    </RelativeLayout>

</FrameLayout>
